# libdisorder

./: .travis.yml  README
code/: CONTRIBUTORS  Makefile.am  README  TODO  configure.ac
code/include/: disorder.h
code/src/: Makefile  Makefile.am  disorder.c
code/test/: test.c
code/tool/: Makefile.am  ropy.c
code/tools/: tropy.c
